[gd_scene load_steps=6 format=2]

[ext_resource path="res://Domino.gd" type="Script" id=1]
[ext_resource path="res://sprites/dominos/00.png" type="Texture" id=2]
[ext_resource path="res://Nunito/Nunito-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 80.0
height = 176.0

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 3 )

[node name="Domino" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 48.0
margin_top = -88.0
margin_right = 88.0
margin_bottom = -74.0
custom_fonts/font = SubResource( 2 )
text = "0 | 0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
